--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ Cython==0.29.34
 dateutils==0.6.12
 decorator==5.1.1
 deepdiff==6.3.0
-dipy @ git+https://github.com/scilus/hot_dipy@4aad99732cf3bc2633be076c25d95ab2f0a839c2
+dipy
 dmri-amico==1.5.4
 dmri-commit==1.6.4
 docker==6.1.2
@@ -58,7 +58,7 @@ google-auth==2.18.1
 google-auth-oauthlib==1.0.0
 grpcio==1.54.2
 h11==0.14.0
-h5py==3.8.0
+h5py
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.4
@@ -161,10 +161,10 @@ threadpoolctl==3.1.0
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
-torch==1.13.1+cu116
-torchaudio==0.13.1+cu116
+torch==1.13.1
+torchaudio==0.13.1
 torchmetrics==0.11.4
-torchvision==0.14.1+cu116
+torchvision==0.14.1
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.9.0
