--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# VS Code project settings
+.vscode/
+
+# Datasets
+TractOracleNet/datasets/fibercup/
+TractOracleNet/datasets/ismrm2015/
+data/
+experiments/
