--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install --user wheel
         pip install --user packaging
+        pip install -U setuptools
         ./install.sh
     - name: Lint with flake8
       run: |
