--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -26,6 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt install libblas-dev liblapack-dev
         python -m pip install --upgrade pip
         pip install --user wheel
         pip install --user packaging
